# fsy

./: Cargo.toml  README.md
src/: action.rs  actions.rs  config.rs  connection.rs  entity.rs  error.rs  key.rs  main.rs  path_watcher.rs  process_sync.rs  queue.rs  sync_watcher.rs  target.rs  target_watcher.rs  tui.rs  watcher.rs
src/old/: key.rs
src/static/: config_tmpl.toml
