[package]
name = "fsy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bao-tree = "0.15.1"
bytes = "1.10.1"
chrono = "0.4.42"
crossterm = "0.29.0"
iroh = "0.91.1"
iroh-blobs = "0.93.0"
n0-future = "0.3.0"
notify = { version = "8.1.0", features = ["serde"] }
notify-debouncer-mini = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
